$Id$

7.x-1.0-XXX
===========
[#1015260] by rfay: Fix requirements message.
[#1011280] by rfay: Fix the _field_sql_storage_etid() #fail
[#1014128] by jdleonard, rfay: Fix invalid conditions in amazon_item_clean_xml()

7.x-1.0-beta4
=============
[#758630] by rfay: Views title should link to Amazon Store.
[#879830] by rfay: Make amazon price work outside US
[#801896] by rfay: Editorial content is double-escaped.
[#944280] by rfay: Fix watchdog PDO fatal
[#959810] by fragtom, rfay: Fix admin/config menu
[#971820] by davidzz: Add BOOKS_1973_AND_LATER to types handled by amazon_media
by rfay: Fixed problem with "all participants" field in views
[#951070] by davidzz, rfay: Make editorialreview not get key tags stripped out.
[#905198] by rfay: Update to new Amazon handling of customer reviews
[#983598] by rfay: Make HTML in Amazon Editorial reviews work
[#984894] by rfay: Change the type of the edition field
[#959766] by dereine, rfay: Fix views support of images



7.x-1.0-beta3
============
- [#761832] followup: Sorry, I messed up a bunch of tpl.php files.

7.x-1.0-beta2
===========
- [#761832] by rfay: D7 theming doesn't work right.
- [#857616] by rfay: Amazon Media module fails with database prefix turned on.

6.x-1.x-RC4 release
===================
- [#671686] by rfay: Fixed Amazon module localization errors.
- [#609448] by rfay: Added rel="nofollow" to detailpageurl links
- [#609448] by rfay: Added Feature: Add customer reviews and ratings to Amazon information retrieved.
- [#556414] by rfay, stratosgear: Provide Amazon.com price or lowest price or both.
- [#697138] by robertDouglass: Added Drupal alter $params before searching in amazon_search so that modules can customize search.
- [#288577] by rfay, reprise: Add 13-digit ISBN/EAN support to the admin test


6.x-1.x-RC3 release
===================
- [#288577] by rfay, tirsales, mleicester: Added 13 digit ISBNs / EAN support / converting to ASINs.